# Jinterp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
tests/: CMakeLists.txt
